language/documentation/book/transactional-tests/tests/creating-coins.exp
processed 2 tasks

task 1 'run'. lines 10-17:
Error: error[E04001]: restricted visibility
   ┌─ <tmp-file-name>:14:21
   │
14 │         let _coin = Coin { value: 100 };
   │                     ^^^^^^^^^^^^^^^^^^^ Invalid instantiation of '0x2::Coin::Coin'.
All structs can only be constructed in the module in which they are declared
